--- a/Pheonix/Core/Include/Core/Voxels/CMakeLists.txt
+++ b/Pheonix/Core/Include/Core/Voxels/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(currentDir ${CMAKE_CURRENT_LIST_DIR})
 set(coreVoxelHeaders
 	${currentDir}/Blocks.hpp
+	${currentDir}/Chunks.hpp
 	
 	PARENT_SCOPE
 )
