--- a/Pheonix/Core/Source/Voxels/CMakeLists.txt
+++ b/Pheonix/Core/Source/Voxels/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(currentDir ${CMAKE_CURRENT_LIST_DIR})
 set(coreVoxelSources
 	${currentDir}/Blocks.cpp
+	${currentDir}/Chunks.cpp
 
 	PARENT_SCOPE
 )
